<resources>
    <string name="app_name">InstStories AutoSave</string>
    <string name="web_auth_head_title">Если будет кнопка «Сохранить данные», нажмите её. Это необходимо для работы приложения</string>
    <string name="auth_success">Вход выполнен</string>
    <string name="loading_auth">Выполняется вход…</string>
    <string name="error_auth">Не удалось войти, повторите попытку</string>
    <string name="welcome_head_title">Добро пожаловать!</string>
    <string name="welcome_body_title">Чтобы начать сохранять истории из instagram нужно войти в аккаунт</string>
    <string name="auth_btn_title">Войти</string>
    <string name="search">Поиск</string>
    <string name="selected_user">Выбранные пользователи:</string>
    <string name="added_user">Добавить пользователей</string>
    <string name="select_users">Выбраннно пользователей: %d</string>
    <string name="using_search">Воспользуйтесь поиском!</string>
    <string name="using_search_subtitle">Найдите аккаунты, для которых хотите создать свой личный архив историй</string>
    <string name="dialog_permissions_denied_head">Не хватает разрешений для работы 🙏</string>
    <string name="dialog_permissions_denied_body">Добавте приложение в исключение при оптимизации батареи, чтобы приложение могло работать в фоновом режиме. Разрешите доступ к файлам, чтобы истории сохранялись на устройство. Это необходимо для работы приложения</string>
    <string name="dialog_permissions_file_write_body">Чтобы сохранить историю в галерею, нужно выдать разрешение на запись файлов</string>
    <string name="btn_title_battery_permission_dialog">Дать разрешение</string>
    <string name="empty_stories">Нет загруженных историй (</string>
    <string name="all_stories">Все истории</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="go_to_instagram">Открыть в Instagram</string>
    <string name="error_save_to_gallary">Не удалось сохранить в галерею</string>
    <string name="saved">Сохранено!</string>
    <string name="save_gallery_load">Сохранение в галерею…</string>
    <string name="open_profile">Открыть профиль</string>

    <plurals name="story_count">
        <item quantity="one">Загружена %d история</item>
        <item quantity="two">Загружено %d истории</item>
        <item quantity="few">Загружено %d истории</item>
        <item quantity="other">Загружено %d историй</item>
    </plurals>

    <string name="date_stories_border">В период с %s по %s</string>
    <string name="video">Видео</string>
    <string name="statistics">Статистика</string>
    <string name="photo">Изображения</string>
    <string name="using_memory">Использования памяти</string>
</resources>