<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.welcomeScreen.WelcomeActivity">

    <TextView
        android:id="@+id/head_title"
        style="@style/FontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_head_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/body_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/body_title"
        style="@style/FontRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/welcome_body_title"
        android:textAlignment="center"
        android:textColor="@color/gray_50"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/auth_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <FrameLayout
        android:id="@+id/auth_btn"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/btn_accent_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/auth_btn_title"
            android:textColor="@color/white" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>