<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.selectUserScreen.SelectedProfilesActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:tint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_keyboard_backspace_24" />

    <LinearLayout
        android:id="@+id/search_block"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_outline_search"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/back">

        <EditText
            android:id="@+id/search_profiles"
            style="@style/FontRegular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clear_text"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:tint="@color/gray_50"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_round_close_24" />

    </LinearLayout>

    <View
        android:id="@+id/line_search"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_outline_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/desc_selected"
        style="@style/FontBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/selected_user"
        android:textColor="@color/gray_50"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/line_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_profiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_selected" />

    <FrameLayout
        android:id="@+id/btn_success"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_disable_bg"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            style="@style/FontBold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/added_user"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/selected_user"
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:padding="2dp"
            android:text="@string/select_users"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/description_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/FontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/using_search"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            style="@style/FontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/using_search_subtitle"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>