<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewerStatistics.ViewerStatisticsActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:tint="@color/black"
        android:translationZ="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_arrow_back_ios_24" />


    <TextView
        android:id="@+id/header_title"
        style="@style/FontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_marginTop="-5dp"
        style="@style/FontRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_memory"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <circlegraph.velmurugan.com.circlegraph.CircleGraphView
        android:id="@+id/graph"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/graph"
        app:layout_constraintEnd_toEndOf="@id/graph"
        app:layout_constraintStart_toStartOf="@id/graph"
        app:layout_constraintTop_toTopOf="@id/graph">

        <TextView
            android:id="@+id/text_size"
            style="@style/FontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="62,6" />

        <TextView
            android:id="@+id/text_unit"
            style="@style/FontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="MB" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/video_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graph">

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@color/insta_color_3" />

        <TextView
            android:id="@+id/video_desc_tv"
            style="@style/FontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/video"
            android:textColor="@color/black"
            tools:text="Video: 20.8MB" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/image_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/graph"
        app:layout_constraintTop_toTopOf="@id/video_desc">

        <View
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@color/red_orange" />

        <TextView
            android:id="@+id/image_desc_tv"
            style="@style/FontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/video"
            android:textColor="@color/black"
            tools:text="Photo: 20.8MB" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_profiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/video_desc">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>